# TrashOs

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  longmode_init.asm
src/memory/: allocator.rs  area_frame_allocator.rs  block_allocator.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  timer.rs
tests/: basic_boot.rs  should_panic.rs
