[package]
name = "trashos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"


[package.metadata.bootimage]
run-args = ["-serial", "stdio"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 
test-timeout = 300


[[test]]
name = "should_panic"
harness = false

[dependencies]
spin = "0.9.2"
# TODO: use GRUB or something with multiboot
bootloader = "0.9.8"
volatile = "0.2.6"
x86_64 = "0.14.7"
uart_16550 = "0.2.16"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]