[package]
name = "trashos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies]
spin = "0.9.2"
volatile = "0.2.6"
x86_64 = "0.14.7"
uart_16550 = "0.2.16"
pic8259 = "0.10.2"
multiboot2 = "0.13.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
