[package]
name = "trashos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies]
spin = "0.9.2"
volatile = "0.2.6"
x86_64 = "0.14.7"
uart_16550 = "0.2.16"
pic8259 = "0.10.2"
multiboot2 = "0.13.1"
linked_list_allocator = "0.9.1"
pc-keyboard = "0.5.1"

[dependencies.futures]
version = "0.3.21"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.crossbeam]
version = "0.8.1"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
